[package]
name = "data_collator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
axum-macros = "0.5.0"
env_logger = "0.11.6"
log = "0.4.26"
polars = "0.46.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
